create the booking page ans the json server and all data get to api

--- a/angular.json
+++ b/angular.json
@@ -22,6 +22,11 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "cars.json",
+                "input": ".",
+                "output": "/"
               }
             ],
             "styles": [
