--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/forms": "^21.0.0",
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
+    "@emailjs/browser": "^4.4.1",
     "json-server": "^1.0.0-beta.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
