--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
     "@emailjs/browser": "^4.4.1",
+    "@netlify/angular-runtime": "^3.0.1",
     "json-server": "^1.0.0-beta.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
