CHENGS ON THE JSON

--- a/angular.json
+++ b/angular.json
@@ -16,6 +16,7 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
+            "outputPath": "dist/cars-webiste",
             "browser": "src/main.ts",
             "tsConfig": "tsconfig.app.json",
             "assets": [
@@ -71,6 +72,14 @@
         },
         "test": {
           "builder": "@angular/build:unit-test"
+        },
+        "deploy": {
+          "builder": "@netlify-builder/deploy:deploy",
+          "options": {
+            "outputPath": "dist/cars-webiste",
+            "netlifyToken": "",
+            "siteId": ""
+          }
         }
       }
     }
