--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@emailjs/browser": "^4.4.1",
     "@netlify/angular-runtime": "^3.0.1",
     "json-server": "^1.0.0-beta.5",
+    "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
