create the chat bot

--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
     "@angular/router": "^21.0.0",
     "@emailjs/browser": "^4.4.1",
     "@netlify/angular-runtime": "^3.0.1",
+    "cors": "^2.8.6",
+    "express": "^5.2.1",
     "json-server": "^1.0.0-beta.5",
     "jwt-decode": "^4.0.0",
+    "openai": "^6.22.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
@@ -45,5 +48,19 @@
     "jsdom": "^27.1.0",
     "typescript": "~5.9.2",
     "vitest": "^4.0.8"
-  }
+  },
+  "description": "This project was generated using [Angular CLI](https://github.com/angular/angular-cli) version 21.0.4.",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yash-vaghsiya/cars-webiste.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/yash-vaghsiya/cars-webiste/issues"
+  },
+  "homepage": "https://github.com/yash-vaghsiya/cars-webiste#readme"
 }
